[workspace]
resolver = "2"
members = ["psst-protocol", "psst-core", "psst-cli", "psst-gui"]

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1

[profile.dev.package.symphonia]
opt-level = 2

[profile.dev.package.libsamplerate]
opt-level = 2

[workspace.metadata.cross.target]
image = "ghcr.io/cross-rs/{{TARGET}}:edge"
pre-build = ["""
    dpkg --add-architecture $CROSS_DEB_ARCH && \
    apt-get update && apt-get --assume-yes install \
    libgtk-3-dev:$CROSS_DEB_ARCH \
    libssl-dev:$CROSS_DEB_ARCH \
    libasound2-dev:$CROSS_DEB_ARCH
    """]
