[package]
name = "psst-cli"
version = "0.1.0"
authors = ["Jan Pochyla <jpochyla@gmail.com>"]
edition = "2021"

[features]
default = ["cpal"]
cpal = ["psst-core/cpal"]
cubeb = ["psst-core/cubeb"]
interflow = ["psst-core/interflow"]

[dependencies]
psst-core = { path = "../psst-core", default-features = false }

env_logger = "0.11.5"
log = "0.4.22"
