[package]
name = "psst-core"
version = "0.1.0"
authors = ["Jan Pochyla <jpochyla@gmail.com>"]
edition = "2021"


[build-dependencies]
gix-config = { version = "0.40.0" }
time = { version = "0.3.36", features = ["local-offset"] }

[dependencies]
psst-protocol = { path = "../psst-protocol" }
rustfm-scrobble-proxy = "2.0.0"
lazy_static = "1.4"

# Common
byteorder = { version = "1.5.0" }
crossbeam-channel = { version = "0.5.13" }
git-version = { version = "0.3.9" }
log = { version = "0.4.22" }
num-bigint = { version = "0.4.6", features = ["rand"] }
num-traits = { version = "0.2.19" }
oauth2 = { version = "4.4.2" }
once_cell = { version = "1.20.2" }
parking_lot = { version = "0.12.3" }
quick-protobuf = { version = "0.8.1" }
rand = { version = "0.8.5" }
rangemap = { version = "1.5.1" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.132" }
socks = { version = "0.3.4" }
tempfile = { version = "3.13.0" }
ureq = { version = "2.10.1", features = ["json"] }
url = { version = "2.5.2" }

# Cryptography
aes = { version = "0.8.4" }
ctr = { version = "0.9.2" }
hmac = { version = "0.12.1" }
sha-1 = { version = "0.10.1" }
shannon = { version = "0.2.0" }

# Audio
audio_thread_priority = { version = "0.32.0" }
cpal = { version = "0.15.3", optional = true }
cubeb = { git = "https://github.com/mozilla/cubeb-rs", optional = true }
libsamplerate = { version = "0.1.0" }
rb = { version = "0.4.1" }
symphonia = { version = "0.5.4", default-features = false, features = [
  "ogg",
  "vorbis",
  "mp3",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
  "Win32_System_Com",
], default-features = false }
