[package]
name = "psst-gui"
version = "0.1.0"
authors = ["Jan Pochyla <jpochyla@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "Fast Spotify client with native GUI"
repository = "https://github.com/jpochyla/psst"

[features]
default = ["cpal"]
cpal = ["psst-core/cpal"]
cubeb = ["psst-core/cubeb"]

[dependencies]
psst-core = { path = "../psst-core" }

# Common
crossbeam-channel = { version = "0.5.13" }
directories = { version = "5.0.1" }
env_logger = { version = "0.11.5" }
itertools = { version = "0.13.0" }
log = { version = "0.4.22" }
lru = { version = "0.12.5" }
once_cell = { version = "1.20.2" }
parking_lot = { version = "0.12.3" }
platform-dirs = { version = "0.3.0" }
rand = { version = "0.8.5" }
regex = { version = "1.11.0" }
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = { version = "1.0.132" }
threadpool = { version = "1.8.1" }
time = { version = "0.3.36", features = ["macros", "formatting"] }
time-humanize = { version = "0.1.3" }
ureq = { version = "2.10.1", features = ["json", "socks-proxy"] }
url = { version = "2.5.2" }

# GUI
druid = { git = "https://github.com/jpochyla/druid", branch = "psst", features = [
  "im",
  "image",
  "jpeg",
  "png",
  "serde",
] }
druid-enums = { git = "https://github.com/jpochyla/druid-enums" }
druid-shell = { git = "https://github.com/jpochyla/druid", branch = "psst", features = [
  "raw-win-handle",
] }
open = { version = "5.3.0" }
raw-window-handle = { version = "0.5.2" } # Must stay compatible with Druid
souvlaki = { version = "0.7.3", default-features = false, features = [
  "use_zbus",
] }
sanitize_html = "0.8.1"
rustfm-scrobble-proxy = "2.0.0"
[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1.12" }
image = { version = "0.25.4" }

[package.metadata.bundle]
name = "Psst"
identifier = "com.jpochyla.psst"
icon = ["assets/logo.icns"]
version = "0.1.0"
resources = []
copyright = "Copyright (c) Jan Pochyla 2024. All rights reserved."
category = "Music"
short_description = "Fast Spotify client with native GUI"
long_description = """
Small and efficient graphical music player for Spotify network.
"""
