[package]
name = "psst-gui"
version = "0.1.0"
authors = ["Jan Pochyla <jpochyla@gmail.com>"]
edition = "2021"
build = "build.rs"
description = "Fast and native Spotify client"
repository = "https://github.com/jpochyla/psst"

[features]
default = ["cpal"]
cpal = ["psst-core/cpal"]
cubeb = ["psst-core/cubeb"]

[dependencies]
psst-core = { path = "../psst-core" }

# Common
crossbeam-channel = { version = "0.5.15" }
directories = "6.0.0"
env_logger = { version = "0.11.8" }
itertools = "0.14.0"
log = { version = "0.4.28" }
lru = "0.16.2"
parking_lot = { version = "0.12.5" }
rand = { version = "0.9.2" }
regex = { version = "1.12.2" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.145" }
threadpool = { version = "1.8.1" }
time = { version = "0.3.44", features = ["macros", "formatting"] }
time-humanize = { version = "0.1.3" }
ureq = { version = "3.1.4", features = ["json", "socks-proxy"] }
url = { version = "2.5.7" }
infer = "0.19.0"

# GUI
druid = { git = "https://github.com/jpochyla/druid", branch = "psst", features = [
  "im",
  "image",
  "jpeg",
  "png",
  "webp",
  "serde",
] }
druid-enums = { git = "https://github.com/jpochyla/druid-enums" }
druid-shell = { git = "https://github.com/jpochyla/druid", branch = "psst", features = [
  "raw-win-handle",
] }
open = { version = "5.3.2" }
raw-window-handle = "0.6.2" # Must stay compatible with Druid
souvlaki = { version = "0.8.3", default-features = false, features = ["use_zbus"] }
sanitize_html = "0.10.0"
rustfm-scrobble = "1.1.1"
[target.'cfg(windows)'.build-dependencies]
winres = { version = "0.1.12" }
image = { version = "0.25.9" }

[package.metadata.bundle]
name = "Psst"
identifier = "com.jpochyla.psst"
icon = ["assets/logo.icns"]
version = "0.1.0"
resources = []
copyright = "Copyright (c) Jan Pochyla 2024. All rights reserved."
category = "Music"
short_description = "Fast and native Spotify client"
long_description = """
Small and efficient graphical music player for the Spotify network.
"""
